[gd_scene load_steps=3 format=3 uid="uid://cjgxsqppbcywg"]

[ext_resource type="Theme" uid="uid://cyqopbh6yucwu" path="res://Core/UI/Themes/DefaultTheme.tres" id="1_j72gc"]
[ext_resource type="Script" path="res://Core/UI/Menu/MainMenu.gd" id="2_uhgh7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j72gc")
script = ExtResource("2_uhgh7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "BackpackShooter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVB" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Exit")
theme_override_font_sizes/font_size = 24
text = "Start
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Start")
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVB/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVB/Exit" to="." method="_on_exit_pressed"]
